# miniRTpp

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: main.cpp  window.cpp  window.hpp
